4.5 -> 5.0:
    - rse: use __MKDIR_P instead of MKDIR_P for RPM's own specially determined "mkdir -p" to not conflict with Automake MKDIR_P
    - rse: various cleanups and fixes to the test programs
    - jbj: oops, "RPMTAG_FILENAMES" still needed.
    - jbj: extension tags in hdrfmt.c now can be passed NULL. Start the fixing.
    - jbj: rpmtfs-py.c needs _free from rpmio.h, not rpmlib.h
    - jbj: add RPMTAG_{FILE,ORIG}PATHS to not revisit old expectations.
    - jbj: _FINALLY_ get rpmfiBuildFNames() out of rpm libraries. w00t!
    - jbj: add headerGetExtension(RPMTAG_FILENAMES), and rpmdb/hdrfmt.c orphan.
    - jbj: use headerGetExtension(RPMTAG_NVRA) most everywhere.
    - jbj: use headerGetExtension() for mire matching. memleaks next.
    - jbj: compute extension cache index correctly with chained tables.
    - rse: upgrade lua/local/lrexlib.c from version 1.x (nov00-06oct03) to latest version 1.19 (may04-18dec04)
    - jbj: teach headerGetExtension() to lookup extensions.
    - jbj: chain through new headerCompundFormats.
    - jbj: refactor most header extensions from -lrpm to -lrpmdb. heh, no filenames, very sick and sad.
    - jbj: add headerGetExtension(), mapped to gud old stuff for now.
    - jbj: skeletal configgery for standalone index tables.
    - jbj: another header-extension-less hack-a-round.
    - jbj: hack up a NVRA retrival w/o extensions, sigh.
    - jbj: add RPMTAG_NVRA header extension.
    - jbj: python ds.Uname getter for uname(...) dependencies.
    - jbj: use rpmmg magic wrapper.
    - jbj: add rpmmg magic wrapper.
    - jbj: unsnarl __FUNCTION__ from system.h AutoFu.
    - rse: make sure RPM is also linked against libm if external Lua is used (as liblua required libm)
    - rse: support building against PCRE for its regcomp(3) emulation API pcreposix(3) -- used by RPM internally
    - rse: support building against PCRE for its native API pcre(3) -- used by the Lua "rex" extension library