@@ -1,4 +1,5 @@
 4.5 -> 5.0:
+    - rse: use Autoconf newer $(MKDIR_P) instead of older $(mkinstalldirs) in Makefile.am
     - rse: use __MKDIR_P instead of MKDIR_P for RPM's own specially determined "mkdir -p" to not conflict with Automake MKDIR_P
     - rse: various cleanups and fixes to the test programs
     - jbj: oops, "RPMTAG_FILENAMES" still needed.
